--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "express": "^4.19.2",
+    "lodash": "^4.17.21",
     "puppeteer": "^22.10.0",
     "request-ip": "^3.3.0"
   }
